--- a/testing/trino-server-dev/etc/config.properties
+++ b/testing/trino-server-dev/etc/config.properties
@@ -55,4 +55,5 @@ plugin.bundles=\
   ../../plugin/trino-exchange-hdfs/pom.xml, \
   ../../plugin/trino-mysql-event-listener/pom.xml
 
+plugin.dir=etc/plugin
 node-scheduler.include-coordinator=true
